[package]
name = "tokio-udp-framed"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"
description = """
Based on UdpFramed from tokio-util but with some quality of life modifications to support shared ownership of `UdpSocket`
and to split Send/Recv into their own types.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "udp", "tokio"]
repository = "https://github.com/leshow/tokio-udp-framed"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0" }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }

bytes = "1.0.0"
futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-io = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", optional = true }
pin-project-lite = "0.2.0"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tokio-test = { version = "0.4.0" }

futures = "0.3.0"
futures-test = "0.3.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
